# job-app-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: banned_skills.example.yaml  ground_truth.example.md  profile.example.yaml
docs/: CONTRIBUTING.md  LINE_FILL.md  PHILOSOPHY.md  SELF_IMPROVEMENT.md
examples/sample_application/: Cover_Letter__Research_Scientist__Example_Role.md  README.md  Resume__Research_Scientist__Example_Role.md  lint_output.txt
rules/: ai_writing_tropes.md  cover_letter_rules.md  pre_submit_checklist.md  resume_rules.md
templates/: app_dir_readme.md  cover_letter_template.md  resume_template.md  retrospective.md
toolkit/: __init__.py  ats.py  build.py  cli.py  crosscheck.py  learn.py  line_fill.py  lint.py  lint_aq.py
workflow/: WORKFLOW.md  discovery.md  evaluation_rubric.md  gdoc_sync.md  variant_management.md
